--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 .iframeContainer {
   padding: 20px;
   border: 1px solid #e3e3e3;
@@ -31,5 +33,8 @@ body {
 }
 
 
-
+#map,
+body,
+html {
+  height: 100%;
 }
