--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 #footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%; /* Set the fixed height of the footer here */
   height: 10px;
