--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -29,7 +29,7 @@
 
   <!-- CSS Scripts -->
   <link rel="stylesheet" href="d3Style.css">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
@@ -107,13 +107,10 @@
       <p>By Winnie, Lei, and Rob</p>
     </div>
     <!-- Leaflet heatmap plugin-->
-    <!-- <script type="text/javascript" src="leaflet-heat.js"></script> -->
-    <!-- API key -->
-    <!-- <script type="text/javascript" src="config.js"></script>
-    <script type="text/javascript" src="heatmap.js"></script> -->
-    <script src="{{ url_for('static', filename='js/heatmap.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/config.js') }}"></script>
     <script src="{{ url_for('static', filename='js/leaflet-heat.js') }}"></script>
+    <!-- API key -->
+    <script src="{{ url_for('static', filename='js/config.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/heatmap.js') }}"></script>
 
 
 </body>
