Files added/revised

--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -28,8 +28,8 @@
 
 
   <!-- CSS Scripts -->
-  <link rel="stylesheet" href="d3Style.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/d3Style.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/style.css') }}" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
