Files added/revised

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,24 +67,24 @@
         <div class="row">
             <div class="col-md-12 jumbotron text-center">
                 <h1>Air Cleanliness</h1>
-                <p>and Your Health</p>
+                <h2>and Your Health</h2>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-5">
                 <div class="well">
-                    <h5>SELECT Sample:</h5>
+                    <h5>Select City:</h5>
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Sample MetaData</h3>
+                        <h3 class="panel-title">Statistics</h3>
                     </div>
                     <div id="sample-metadata" class="panel-body"></div>
                 </div>
             </div>
-            <div class="col-md-9">
-                <div id="pie"></div>
+            <div class="col-md-7">
+                <div id="bar"></div>
             </div>
         </div>
         <div class="row">
@@ -96,11 +96,6 @@
         <div class="row">
             <div class="col-md-12">
                 <div id="bubble"></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="gauge"></div>
             </div>
         </div>
 
