--- a/templates/politicians.html
+++ b/templates/politicians.html
@@ -123,20 +123,13 @@
             <option value="WY">Wyoming</option>
           </select>
           <button id="state-btn" type="submit" class="btn btn-default">
-            <h4>I want to take action!</h4>
+            <h4>Click here to take action!</h4>
           </button>
 
 
         </div>
 
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Who to Contact:</h3>
-          </div>
-          <div id="politicians-card" class="panel-body">
-
-          </div>
-        </div>
+        <div class="row" id="politicians-card"></div>
       </div>
 
       <!-- Footer-->
