--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -35,7 +35,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <!-- Home/TITLE -->
-  <a class="navbar-brand" href="/">AIR QUALITY</a>
+  <!-- <a class="navbar-brand" href="/">AIR QUALITY</a> -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
