--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -33,6 +33,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head>
+
+<style>
+  /* set legend */
+  .legend {
+    line-height: 18px;
+    color: black;
+    font-weight: bold
+  }
+
+  .legend i {
+    width: 25px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <!-- Home/TITLE -->
   <!-- <a class="navbar-brand" href="/">AIR QUALITY</a> -->
