--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <div class="well">
                     <h5>Select City:</h5>
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
@@ -83,21 +83,18 @@
                     <div id="sample-metadata" class="panel-body"></div>
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-6">
                 <div id="bar"></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <h1> </h1>
-                <h1> </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div id="bubble"></div>
-            </div>
-        </div>
+        <br><br>
+        <select id="selDataset" onchange="getData(this.value)">
+            <option value="Asthma">Asthma</option>
+            <option value="COPD">COPD</option>
+            <option value="Stroke">Stroke</option>
+            <option value="Heart_Disease">Heart Disease</option>
+        </select>
+        <div id="plot"></div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
