--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,5 +1,3 @@
-
-
 .iframeContainer {
   padding: 20px;
   border: 1px solid #e3e3e3;
@@ -27,6 +25,7 @@ html {
 
 body {
   /* Padding bottom by footer height */
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   padding-bottom: 80px;
 }
 
@@ -51,4 +50,27 @@ body {
 body,
 html {
   height: 100%;
+}
+
+a:link {
+  color: darkblue;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: white;
+}
+
+a:active {
+  color: white;
+}
+
+#test {
+  margin-bottom: 30px;
+  background-color: powderblue;
+  text-align: center;
+  vertical-align: middle;
 }
