--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -25,7 +25,7 @@ html {
 
 body {
   /* Padding bottom by footer height */
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   padding-bottom: 80px;
 }
 
@@ -73,4 +73,5 @@ a:active {
   background-color: powderblue;
   text-align: center;
   vertical-align: middle;
+  border-radius: 12px;
 }
