--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
         integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
         crossorigin=""></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- CSS Scripts -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -54,8 +55,10 @@
 
     <div class="container">
         <div id="test">
-            <h1>Air Quality</h1>
+            <br>
+            <h1><b>Air Quality</b></h1>
             <h3>and Your Health</h3>
+            <br>
         </div>
         <div class="row">
             <div class="col-sm-6">
